--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Hair Style AI Generator - 環境変数設定
 
 # ==== API認証 ====
-# Google Gemini 2.5 Flash Preview 05-20
+# Google Gemini 2.5 Flash
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Black Forest Labs FLUX.1 Kontext Pro
