--- a/env.example
+++ b/env.example
@@ -11,6 +11,9 @@ BFL_API_KEY=your_bfl_api_key_here
 # Redis (タスクキュー・セッション管理)
 REDIS_URL=redis://localhost:6379/0
 
+# Redisパスワード（docker-composeでの本番環境では必須）
+REDIS_PASSWORD=your_secure_password_here
+
 # ==== Flask設定 ====
 # セキュリティキー（本番では強力なキーを生成）
 SECRET_KEY=your_secret_key_here
