環境設定ファイルにスクレイピング用のCSSセレクタを追加し、README.mdのCeleryワーカー起動コマンドを修正。Flaskアプリケーションのレート制限設定のキー名を更新し、タスクサービスにフロントエンドからのタスクIDを受け取る機能を追加。画像生成APIの進捗通知処理を改善し、ギャラリーページの表示ロジックを修正。Nginx設定を更新し、静的ファイルの効率的な配信を設定。

--- a/docker/nginx.conf.example
+++ b/docker/nginx.conf.example
@@ -61,6 +61,20 @@ http {
             proxy_read_timeout 7d;
         }
 
+        # 静的ファイルの効率的な配信
+        # docker-compose.ymlのvolumeマウントとパスを合わせる
+        location /static/uploads/ {
+            alias /var/www/uploads/;
+            expires 30d;
+            add_header Cache-Control "public";
+        }
+
+        location /static/generated/ {
+            alias /var/www/generated/;
+            expires 30d;
+            add_header Cache-Control "public";
+        }
+
         # Flaskアプリケーションへのプロキシ設定
         location / {
             proxy_pass http://flask_app;
@@ -70,14 +84,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 静的ファイルの効率的な配信（任意）
-        # docker-compose.ymlのvolumeマウントとパスを合わせる
-        location /static/ {
-            alias /var/www;
-            expires 30d;
-            add_header Cache-Control "public";
         }
     }
 } 
