--- a/env.example
+++ b/env.example
@@ -32,6 +32,10 @@ GENERATED_FOLDER=app/static/generated
 # 最大ファイルサイズ (10MB)
 MAX_CONTENT_LENGTH=10485760
 
+# === オプション設定 ===
+# スクレイピング対象のCSSセレクタ（変更する場合のみ設定）
+# HOTPEPPER_BEAUTY_IMAGE_SELECTOR="#jsiHoverAlphaLayerScope > div.cFix.mT20.pH10 > div.fl > div.pr > img"
+
 # ==== API制限設定 ====
 # FLUX.1 Kontext制限
 FLUX_MAX_WAIT_TIME=300
