README.mdのディレクトリ構造を更新し、各フォルダの説明を詳細化。APIルートの画像保存機能を改善し、ファイル情報の取得処理を追加。Docker設定のCeleryワーカー起動コマンドを修正し、依存関係のバージョンを更新。requirements.mdのAPI統合情報を修正。

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       dockerfile: docker/Dockerfile
     container_name: hair-style-worker
     restart: unless-stopped
-    command: celery -A app.celery worker --loglevel=info --concurrency=2
+    command: celery -A run.celery_app worker --loglevel=info --concurrency=2
     environment:
       - FLASK_ENV=production
       - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
@@ -78,7 +78,7 @@ services:
     depends_on:
       - redis
     healthcheck:
-      test: ["CMD", "celery", "-A", "app.celery", "inspect", "ping"]
+      test: ["CMD", "celery", "-A", "run.celery_app", "inspect", "ping"]
       interval: 60s
       timeout: 30s
       retries: 3
