プロンプト生成機能に追加効果の選択肢を実装し、ユーザーインターフェースを改善。効果選択に応じたプロンプト要件を明確化し、明るさ調整機能を追加。関連するJavaScriptコードをリファクタリングし、状態管理を強化。

--- a/.gitignore
+++ b/.gitignore
@@ -346,4 +346,7 @@ coverage/
 # サンプル設定ファイルは保持
 !.env.example
 !docker-compose.example.yml
-!nginx.example.conf 
+!nginx.example.conf w
+
+# MCP
+.serena/
