--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # Hair Style AI Generator - Production Docker Compose
 # 本番環境用マルチコンテナ構成
 
@@ -9,15 +7,15 @@ services:
     image: redis:7-alpine
     container_name: hair-style-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    command: sh -c 'if [ -n "$REDIS_PASSWORD" ]; then exec redis-server --appendonly yes --requirepass "$REDIS_PASSWORD"; else exec redis-server --appendonly yes; fi'
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      test: ["CMD-SHELL", "if [ -n \"$REDIS_PASSWORD\" ]; then redis-cli -a \"$REDIS_PASSWORD\" ping; else redis-cli ping; fi"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -35,12 +33,16 @@ services:
       - "5001:5000"
     environment:
       - FLASK_ENV=production
-      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
-      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD:-}@redis:6379/0
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - BFL_API_KEY=${BFL_API_KEY}
       - SECRET_KEY=${SECRET_KEY}
+      - FLUX_API_BASE_URL=${FLUX_API_BASE_URL}
+      - FLUX_REQUEST_TIMEOUT_POST=${FLUX_REQUEST_TIMEOUT_POST}
+      - FLUX_REQUEST_TIMEOUT_GET=${FLUX_REQUEST_TIMEOUT_GET}
+      - FLUX_MAX_WAIT_TIME=${FLUX_MAX_WAIT_TIME}
     volumes:
       - upload_data:/app/app/static/uploads
       - generated_data:/app/app/static/generated
@@ -65,12 +67,16 @@ services:
     command: celery -A run.celery_app worker --loglevel=info --concurrency=2
     environment:
       - FLASK_ENV=production
-      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
-      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD:-}@redis:6379/0
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - BFL_API_KEY=${BFL_API_KEY}
       - SECRET_KEY=${SECRET_KEY}
+      - FLUX_API_BASE_URL=${FLUX_API_BASE_URL}
+      - FLUX_REQUEST_TIMEOUT_POST=${FLUX_REQUEST_TIMEOUT_POST}
+      - FLUX_REQUEST_TIMEOUT_GET=${FLUX_REQUEST_TIMEOUT_GET}
+      - FLUX_MAX_WAIT_TIME=${FLUX_MAX_WAIT_TIME}
     volumes:
       - upload_data:/app/app/static/uploads
       - generated_data:/app/app/static/generated
