--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,154 +1,54 @@
-# Hair Style AI Generator - Production Docker Compose
-# 本番環境用マルチコンテナ構成
-
 services:
-  # Redisサービス（メッセージキュー・セッション管理）
-  redis:
-    image: redis:7-alpine
-    container_name: hair-style-redis
-    restart: unless-stopped
-    command: sh -c 'if [ -n "$REDIS_PASSWORD" ]; then exec redis-server --appendonly yes --requirepass "$REDIS_PASSWORD"; else exec redis-server --appendonly yes; fi'
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
-    healthcheck:
-      test: ["CMD-SHELL", "if [ -n \"$REDIS_PASSWORD\" ]; then redis-cli -a \"$REDIS_PASSWORD\" ping; else redis-cli ping; fi"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    networks:
-      - hair-style-network
-
-  # メインWebアプリケーション
-  web:
-    build: 
+  hairstyle_web:
+    build:
       context: ..
       dockerfile: docker/Dockerfile
-    container_name: hair-style-web
-    restart: unless-stopped
-    ports:
-      - "5001:5000"
-    environment:
-      - FLASK_ENV=production
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - BFL_API_KEY=${BFL_API_KEY}
-      - SECRET_KEY=${SECRET_KEY}
-      - FLUX_API_BASE_URL=${FLUX_API_BASE_URL}
-      - FLUX_REQUEST_TIMEOUT_POST=${FLUX_REQUEST_TIMEOUT_POST}
-      - FLUX_REQUEST_TIMEOUT_GET=${FLUX_REQUEST_TIMEOUT_GET}
-      - FLUX_MAX_WAIT_TIME=${FLUX_MAX_WAIT_TIME}
-    volumes:
-      - upload_data:/app/app/static/uploads
-      - generated_data:/app/app/static/generated
-      - ./logs:/app/logs
+    container_name: hairstyle_web_app
+    restart: always
     depends_on:
-      - redis
-    healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:5000/api/health')"]
-      interval: 30s
-      timeout: 30s
-      retries: 3
+      - hairstyle_redis
+    volumes:
+      - hairstyle_uploads:/app/app/static/uploads
+      - hairstyle_generated:/app/app/static/generated
+    env_file:
+      - .env
     networks:
-      - hair-style-network
+      - caddy_network # 共有ネットワークに接続
 
-  # Celeryワーカー（非同期タスク処理）
-  worker:
-    build: 
+  hairstyle_worker:
+    build:
       context: ..
       dockerfile: docker/Dockerfile
-    container_name: hair-style-worker
-    restart: unless-stopped
+    container_name: hairstyle_worker_app
+    restart: always
     command: celery -A run.celery_app worker --loglevel=info --concurrency=2
-    environment:
-      - FLASK_ENV=production
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD:-}@redis:6379/0
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - BFL_API_KEY=${BFL_API_KEY}
-      - SECRET_KEY=${SECRET_KEY}
-      - FLUX_API_BASE_URL=${FLUX_API_BASE_URL}
-      - FLUX_REQUEST_TIMEOUT_POST=${FLUX_REQUEST_TIMEOUT_POST}
-      - FLUX_REQUEST_TIMEOUT_GET=${FLUX_REQUEST_TIMEOUT_GET}
-      - FLUX_MAX_WAIT_TIME=${FLUX_MAX_WAIT_TIME}
-    volumes:
-      - upload_data:/app/app/static/uploads
-      - generated_data:/app/app/static/generated
-      - ./logs:/app/logs
     depends_on:
-      - redis
-    healthcheck:
-      test: ["CMD", "celery", "-A", "run.celery_app", "inspect", "ping"]
-      interval: 60s
-      timeout: 30s
-      retries: 3
-    networks:
-      - hair-style-network
-
-  # Nginx リバースプロキシ（本番用）
-  nginx:
-    image: nginx:alpine
-    container_name: hair-style-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
+      - hairstyle_redis
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-      - upload_data:/var/www/uploads:ro
-      - generated_data:/var/www/generated:ro
-    depends_on:
-      - web
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - hairstyle_uploads:/app/app/static/uploads
+      - hairstyle_generated:/app/app/static/generated
+    env_file:
+      - .env
     networks:
-      - hair-style-network
+      - caddy_network # 共有ネットワークに接続
 
-  # モニタリング（オプション）
-  monitoring:
-    image: prom/prometheus:latest
-    container_name: hair-style-monitoring
-    restart: unless-stopped
-    ports:
-      - "9090:9090"
+  hairstyle_redis:
+    image: redis:7-alpine
+    container_name: hairstyle_redis_app
+    restart: always
+    command: sh -c 'redis-server --appendonly yes --requirepass "$$REDIS_PASSWORD"'
     volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
+      - hairstyle_redis_data:/data
+    env_file:
+      - .env
     networks:
-      - hair-style-network
+      - caddy_network # 共有ネットワークに接続
 
-# データ永続化ボリューム
 volumes:
-  redis_data:
-    driver: local
-  upload_data:
-    driver: local
-  generated_data:
-    driver: local
-  prometheus_data:
-    driver: local
+  hairstyle_uploads:
+  hairstyle_generated:
+  hairstyle_redis_data:
 
-# ネットワーク設定
 networks:
-  hair-style-network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16 
+  caddy_network:
+    external: true
