Docker Composeファイルを新規作成し、ヘアスタイル関連のサービス（Web、Worker、Redis）を定義。ボリュームとネットワーク設定を追加し、環境変数の管理を.envファイルに統一。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   hairstyle_web:
     build:
-      context: ..
+      context: .
       dockerfile: docker/Dockerfile
     container_name: hairstyle_web_app
     restart: always
@@ -17,7 +17,7 @@ services:
 
   hairstyle_worker:
     build:
-      context: ..
+      context: .
       dockerfile: docker/Dockerfile
     container_name: hairstyle_worker_app
     restart: always
